[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lru"
harness = false

[[bench]]
name = "fifo"
harness = false
