[package]
name = "cli"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }

tokio = { version = "1", features = ["full"] }
snmalloc-rs = { version = "0.2", optional = true, features = ["cache-friendly"] }

[features]
default = ["snmalloc-rs"]
native-cpu = ["snmalloc-rs/native-cpu"]
