[package]
name = "cli"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
config = { path = "../config" }
http = { path = "../http" }
database = { path = "../database" }

argh = "0.1.5"
dotenv = "0.15"
chrono = "0.4.19"
brotli = "3.3.2"
rmp-serde = "1.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
