[package]
name = "config"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }

anyhow = "1.0.40"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
config-rs = { version = "0.11", package = "config" }
arc-swap = "1.3.0"
once_cell = "1.7.2"
notify = "4.0.17"
dotenv = "0.15.0"
