[package]
name = "core"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
logger = { path = "../logger" }
http = { path = "../http" }
database = { path = "../database" }

once_cell = "1.7"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
pprof = { version = "0.5.0", optional = true, features = ["flamegraph"] }
regex = { version = "1.5.4", optional = true }

[features]
default = []

prof = ["pprof", "regex"]
