[package]
name = "core"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
logger = { path = "../logger" }
http = { path = "../http" }

anyhow = "1.0"
tokio = { version = "1", features = ["full", "parking_lot"] }

# prof
pprof = { version = "0.5.0", optional = true, features = ["flamegraph"] }
regex = { version = "1.5.4", optional = true }

snmalloc-rs = { version = "0.2", optional = true, features = ["cache-friendly"] }

[features]
default = ["snmalloc"]
snmalloc = ["snmalloc-rs"]
native-cpu = ["snmalloc-rs/native-cpu"]

# internal features
prof = ["pprof", "regex"]
