[package]
name = "core"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
logger = { path = "../logger" }
http = { path = "../http" }
utils  = { path = "../utils" }

anyhow = "1.0"
tokio = { version = "1", features = ["full", "parking_lot"] }
log = "0.4"
futures = "0.3"

console-subscriber = { git = "https://github.com/tokio-rs/console", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

# prof
pprof = { version = "0.5.0", optional = true, features = ["flamegraph"] }
regex = { version = "1.5.4", optional = true }

snmalloc-rs = { version = "0.2", optional = true }

[features]
default = ["snmalloc"]
snmalloc = ["snmalloc-rs"]
native-cpu = ["snmalloc-rs/native-cpu"]
tokio-console = ["console-subscriber", "tracing-subscriber"]

# internal features
prof = ["pprof", "regex"]
