[package]
name = "data_structure"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
database = { path = "../database" }
config = { path = "../config" }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sled = "0.34.6"
