[package]
name = "database"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
proc_macro = { path = "../proc_macro" }
config = { path = "../config" }
error = { path = "../error" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = { version = "1", features = [ "zlib-ng-compat" ], default-features = false }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
compact_str = { version = "0.1", features = ["serde"] }

[dependencies.rbatis]
version = "2.0.20"
default-features = false
features = ["tokio1", "sqlite"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "sqlite",
    "migrate",
    "uuid",
    "chrono",
    "tls",
    "any",
    "macros"
]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
