[package]
name = "error"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.26"

rbatis = { version = "2.0.20", default-features = false }
sqlx = { version  ="0.5.5", default-features = false }
hyper = { version = "0.14", default-features = false }
handlebars = { version = "4.0", default-features = false }
rocksdb = { version = "0.17", default-features = false }
