[package]
name = "http"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
utils = { path = "../utils" }
data_structure = { path = "../data_structure" }
config = { path = "../config" }
logger = { path = "../logger" }
error = { path = "../error" }

tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rmp-serde = "0.15"
quick-xml = { version = "0.22", features = ["serialize"] }
serde_urlencoded = "0.7"
cookie = "0.15.0"
async-session = "3.0.0"
async-trait = "0.1.51"
chrono = "0.4.19"

axum = "0.2"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

handlebars = "4.1.2"

[target.'cfg(target_os = "unix")'.dependencies]
hyperlocal = "0.8"
