[package]
name = "http"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
utils = { path = "../utils" }
config = { path = "../config" }
logger = { path = "../logger" }
template = { path = "../template" }

tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
headers = "0.3.4"
async-session = "3.0.0"
async-trait = "0.1.51"
log = "0.4.14"
compact_str = { version = "0.1", features = ["serde"] }
rbatis = { version = "2.1.3", default-features = false }
bincode = "1.3"
anyhow = "1.0"
rocksdb = { version = "0.17", default-features = false, features = ["snappy"], optional = true }
cfg-if = "1.0.0"
arc-swap = "1.3.0"
once_cell = "1.8.0"
inquire = "0.2"

axum = { version = "0.2", features = ["headers"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

[target.'cfg(target_os = "unix")'.dependencies]
hyperlocal = "0.8"

[features]
default = ["session_store_rocksdb"]
session_store_rocksdb = ["rocksdb"]
