[package]
name = "logger"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
config = { path = "../config" }

tokio = { version = "1", features = ["full"] }
once_cell = "1.8.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
crossfire = "0.1.5"
colored = "2"
log = { version = "0.4", features = ["serde"] }
compact_str = { version = "0.1", features = ["serde"] }
serde_json = "1.0"
tracing = { version = "0.1", default-features = false, features = ["log", "log-always"] }
futures = "0.3.17"
