[package]
name = "settings"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
utils = { path = "../utils" }

anyhow = "1.0"
sled = { version = "0.34.6", features = ["compression"] }
once_cell = "1.8.0"
