[package]
name = "template"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#liquid = "0.22.0"
#liquid-lib = { version = "0.22.0", features = ["jekyll"] }
handlebars = { version = "4.0.1", features = ["script_helper"] }
serde = { version = "1.0", features = ["derive"] }
rust-embed = { version = "5.9.0", features = ["compression", "interpolate-folder-path"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
