[package]
name = "timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-recursion = "0.3.2"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
crossbeam-utils = "0.8.5"
once_cell = "1.8.0"
